--- a/style.css
+++ b/style.css
@@ -62,10 +62,19 @@ nav ul li a:hover {
   transform: scale(1.05);
 }
 
-.descricao {
+.manchete {
   margin-top: 10px;
   font-weight: bold;
+  color: blue; 
 }
+
+.texto-manchete{
+  text-align: justify;
+  font-style: normal;
+  font-family: Arial, Helvetica, sans-serif;
+}
+  
+
 
 /* Rodapé */
 footer {
