--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav ul li a:hover {
 .manchete {
   margin-top: 10px;
   font-weight: bold;
-  color: blue; 
+  color: red; 
 }
 
 .texto-manchete{
